# Windborne

./: .env.example  .gitignore  Assignment.md  Dockerfile  README.md  console_dump.json  dev.db  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: Home.py  streamlit_app.py
app/pages/: 1_Metrics_Dashboard.py  2_Production_Design.py
scripts/: calc_metrics.py  load_financials.py  run_fetch.sh
src/: alphavantage_client.py  config.py  db.py  db_manager.py  extractor.py  logger.py  main.py  models.py  utils.py
tests/: test_alphavantage_client.py  test_extractor.py
